# countdown

./: README.md  main.py  pyproject.toml  requirements.txt
.github/: dependabot.yml
.github/workflows/: build.yml  lint.yml  pylint.yml
src/countdown/: __init__.py  app.py  utils.py
src/countdown/widgets/: __init__.py  countdown.py  selector.py
